--- a/trust-api/service.yaml
+++ b/trust-api/service.yaml
@@ -2,7 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: trusted-api
+    app.kubernetes.io/name: trusted-api
+    app.kubernetes.io/component: backend
+    app.kubernetes.io/part-of: trusted
   name: trusted-api
 spec:
   ports:
@@ -11,5 +13,7 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: trusted-api
+    app.kubernetes.io/name: trusted-api
+    app.kubernetes.io/component: backend
+    app.kubernetes.io/part-of: trusted
   type: ClusterIP
