--- a/trust-api/020-BuildConfig.yaml
+++ b/trust-api/020-BuildConfig.yaml
@@ -9,6 +9,7 @@ metadata:
 spec:
   triggers:
     - type: ImageChange
+    - type: ConfigChange
   source:
     git:
       uri: https://github.com/xkcd-2347/trust-api
