refactor: add /endpoints directory to be writable by the image

--- a/trust-frontend/030-Deployment.yaml
+++ b/trust-frontend/030-Deployment.yaml
@@ -51,6 +51,10 @@ spec:
           volumeMounts:
             - mountPath: /run
               name: run
+            - mountPath: /endpoints
+              name: endpoints
       volumes:
         - name: run
+          emptyDir: {}
+        - name: endpoints
           emptyDir: {}
